# scikit-package-system

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE.rst  README.md  cookiecutter.json
.codespell/: ignore_words.txt
.github/workflows/: build-and-publish-docs-on-dispatch.yml  build-wheel-release-upload.yml  check-news-item.yml  matrix-and-codecov.yml
hooks/: post_gen_project.py
news/: COC-tests.rst  add-issue-temp.rst  add-release-workflow-pc.rst  changelog.rst  proj-config-in-template.rst  update.rst
{{ cookiecutter.github_repo_name }}/: .pre-commit-config.yaml  CODE-OF-CONDUCT.rst  LICENSE.rst  README.md  README.rst  cookiecutter.json  pyproject.toml
{{ cookiecutter.github_repo_name }}/.github/workflows/: tests-on-pr.yml
{{ cookiecutter.github_repo_name }}/src/{{ cookiecutter.package_dir_name }}/: __init__.py  calculator.py
{{ cookiecutter.github_repo_name }}/tests/: test_calculator.py  test_functions.py
